Code/project-1-to-6-code/k8s-components/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apigateway
  labels:
    application: apigateway
spec:
  type: ClusterIP
  selector:
    application: apigateway
  ports:
    - port: 8080
      targetPort: 8080
